--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "better_svce_fe",
+  "name": "lse_properties",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,6 +20,8 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -31,6 +33,7 @@
     "react-day-picker": "^9.0.4",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-secure-storage": "^1.3.2",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
