--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@sanity/image-url": "1",
+    "@sanity/vision": "3",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
     "class-variance-authority": "^0.7.0",
@@ -28,6 +30,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
+    "next-sanity": "9.8.16",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^9.0.4",
@@ -35,7 +38,9 @@
     "react-hook-form": "^7.52.1",
     "react-secure-storage": "^1.3.2",
     "react-use": "^17.5.1",
+    "sanity": "3",
     "sonner": "^1.5.0",
+    "styled-components": "6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
